[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/GUI/skill1.png" type="Texture" id=1]
[ext_resource path="res://assets/GUI/lifebar_fill.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/lifebar_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/skill1-cooldown.png" type="Texture" id=4]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=5]

[node name="GUI" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -123.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 10
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_right = 924.0
margin_bottom = 113.0
custom_constants/separation = 5

[node name="Abilities" type="HBoxContainer" parent="VContainer"]
margin_right = 824.0
margin_bottom = 55.0
custom_constants/separation = 10
alignment = 1

[node name="Skill1" type="MarginContainer" parent="VContainer/Abilities"]
margin_left = 197.0
margin_right = 297.0
margin_bottom = 55.0
size_flags_horizontal = 12
size_flags_vertical = 12

[node name="CenterContainer" type="CenterContainer" parent="VContainer/Abilities/Skill1"]
margin_right = 100.0
margin_bottom = 55.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureProgress" type="TextureProgress" parent="VContainer/Abilities/Skill1/CenterContainer"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 4 )
fill_mode = 4

[node name="Label" type="Label" parent="VContainer/Abilities/Skill1/CenterContainer"]
margin_left = 38.0
margin_top = 20.0
margin_right = 62.0
margin_bottom = 34.0
text = "120"

[node name="Skill2" type="MarginContainer" parent="VContainer/Abilities"]
margin_left = 307.0
margin_right = 407.0
margin_bottom = 55.0
size_flags_horizontal = 12
size_flags_vertical = 12

[node name="CenterContainer" type="CenterContainer" parent="VContainer/Abilities/Skill2"]
margin_right = 100.0
margin_bottom = 55.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureProgress" type="TextureProgress" parent="VContainer/Abilities/Skill2/CenterContainer"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 4 )
fill_mode = 4

[node name="Label" type="Label" parent="VContainer/Abilities/Skill2/CenterContainer"]
margin_left = 38.0
margin_top = 20.0
margin_right = 62.0
margin_bottom = 34.0
text = "120"

[node name="Skill3" type="MarginContainer" parent="VContainer/Abilities"]
margin_left = 417.0
margin_right = 517.0
margin_bottom = 55.0
size_flags_horizontal = 12
size_flags_vertical = 12

[node name="CenterContainer" type="CenterContainer" parent="VContainer/Abilities/Skill3"]
margin_right = 100.0
margin_bottom = 55.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureProgress" type="TextureProgress" parent="VContainer/Abilities/Skill3/CenterContainer"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 4 )
fill_mode = 4

[node name="Label" type="Label" parent="VContainer/Abilities/Skill3/CenterContainer"]
margin_left = 38.0
margin_top = 20.0
margin_right = 62.0
margin_bottom = 34.0
text = "120"

[node name="SkillUltimate" type="MarginContainer" parent="VContainer/Abilities"]
margin_left = 527.0
margin_right = 627.0
margin_bottom = 55.0
size_flags_horizontal = 12
size_flags_vertical = 12

[node name="CenterContainer" type="CenterContainer" parent="VContainer/Abilities/SkillUltimate"]
margin_right = 100.0
margin_bottom = 55.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureProgress" type="TextureProgress" parent="VContainer/Abilities/SkillUltimate/CenterContainer"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 4 )
fill_mode = 4

[node name="Label" type="Label" parent="VContainer/Abilities/SkillUltimate/CenterContainer"]
margin_left = 38.0
margin_top = 20.0
margin_right = 62.0
margin_bottom = 34.0
text = "120"

[node name="Healthbar" type="CenterContainer" parent="VContainer"]
margin_top = 60.0
margin_right = 824.0
margin_bottom = 113.0

[node name="TextureProgress" type="TextureProgress" parent="VContainer/Healthbar"]
margin_left = 214.0
margin_right = 610.0
margin_bottom = 53.0
value = 70.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )

[node name="Label" type="Label" parent="VContainer/Healthbar"]
margin_left = 385.0
margin_top = 19.0
margin_right = 438.0
margin_bottom = 33.0
text = "10 / 100"
